Add localization resources for timeout err message
[#131582719]

Signed-off-by: Nino Khodabandeh <ninok@hpe.com>

--- a/cf/i18n/resources/de-de.all.json
+++ b/cf/i18n/resources/de-de.all.json
@@ -5284,6 +5284,10 @@
     "translation": "Dies führt zu einem Neustart der App. Sind Sie sicher, dass Sie {{.AppName}} skalieren möchten?"
   },
   {
+    "id": "Timed out waiting for connection to Loggregator",
+    "translation": ""
+  },
+  {
     "id": "Timeout for async HTTP requests",
     "translation": "Zeitlimit für asynchrone HTTP-Anforderungen"
   },
