--- a/cf/i18n/resources/ko-kr.untranslated.json
+++ b/cf/i18n/resources/ko-kr.untranslated.json
@@ -1572,6 +1572,10 @@
     "translation": ""
   },
   {
+    "id": "Timed out waiting for connection to Loggregator",
+    "translation": ""
+  },
+  {
     "id": "URL",
     "translation": "URL"
   },
