--- a/cf/i18n/resources/it-it.untranslated.json
+++ b/cf/i18n/resources/it-it.untranslated.json
@@ -1168,6 +1168,10 @@
     "translation": ""
   },
   {
+    "id": "Timed out waiting for connection to Loggregator",
+    "translation": ""
+  },
+  {
     "id": "URL",
     "translation": "URL"
   },
