improve help description for bind-route-service --path option
[finishes #130413513]

--- a/cf/i18n/resources/de-de.all.json
+++ b/cf/i18n/resources/de-de.all.json
@@ -4008,6 +4008,10 @@
     "translation": "Pfad zum Manifest"
   },
   {
+    "id": "Path used in combination with HOSTNAME and DOMAIN to specify the route to bind",
+    "translation": ""
+  },
+  {
     "id": "Path used to identify the HTTP route",
     "translation": "Für Ermittlung der HTTP-Route verwendeter Pfad"
   },
