better description for the path flag in unbind route service command
[#132879925]

Signed-off-by: Jeff Pak <jeffrey.pak@emc.com>

--- a/cf/i18n/resources/de-de.untranslated.json
+++ b/cf/i18n/resources/de-de.untranslated.json
@@ -1276,6 +1276,10 @@
     "translation": ""
   },
   {
+    "id": "Path used in combination with HOSTNAME and DOMAIN to specify the route to unbind",
+    "translation": ""
+  },
+  {
     "id": "Plan: {{.ServicePlanName}}",
     "translation": "Plan: {{.ServicePlanName}}"
   },
