--- a/cf/i18n/resources/de-de.untranslated.json
+++ b/cf/i18n/resources/de-de.untranslated.json
@@ -1100,6 +1100,10 @@
     "translation": "Create an HTTP route:\\n      CF_NAME create-route SPACE DOMAIN [--hostname HOSTNAME] [--path PATH]\\n\\n   Create a TCP route:\\n      CF_NAME create-route SPACE DOMAIN (--port PORT | --random-port)\\n\\nEXAMPLES:\\n   CF_NAME create-route my-space example.com                             # example.com\\n   CF_NAME create-route my-space example.com --hostname myapp            # myapp.example.com\\n   CF_NAME create-route my-space example.com --hostname myapp --path foo # myapp.example.com/foo\\n   CF_NAME create-route my-space example.com --port 5000                 # example.com:5000"
   },
   {
+    "id": "Creating task for app {{.AppName}} in org {{.OrgName}} / space {{.SpaceName}} as {{.CurrentUser}}...",
+    "translation": ""
+  },
+  {
     "id": "Dashboard: {{.URL}}",
     "translation": "Dashboard: {{.URL}}"
   },
@@ -1320,6 +1324,10 @@
     "translation": "Route {{.HostName}}.{{.DomainName}}/{{.Path}} {{.Existence}}"
   },
   {
+    "id": "Run a one-off task on an app",
+    "translation": ""
+  },
+  {
     "id": "SERVICE",
     "translation": "SERVICE"
   },
@@ -1388,6 +1396,10 @@
     "translation": "Tags: {{.Tags}}"
   },
   {
+    "id": "Task {{.TaskSequenceID}} has been submitted successfully for execution.",
+    "translation": ""
+  },
+  {
     "id": "The API endpoint",
     "translation": "The API endpoint"
   },
@@ -1422,6 +1434,10 @@
   {
     "id": "The command name",
     "translation": "The command name"
+  },
+  {
+    "id": "The command to execute",
+    "translation": ""
   },
   {
     "id": "The domain",
