add run-task integration tests
Added run-task help output.
Skipping integration tests until boshes in pipeline are running V2.64
Translations

[finish #131231307]

Signed-off-by: Matthew Boedicker <mboedicker@pivotal.io>

--- a/cf/i18n/resources/de-de.all.json
+++ b/cf/i18n/resources/de-de.all.json
@@ -1184,6 +1184,10 @@
     "translation": ""
   },
   {
+    "id": "CF_NAME run-task APP_NAME COMMAND\\n\\nEXAMPLES:\\n   CF_NAME run-task my-app \\\"bundle exec rake db:migrate\\\"",
+    "translation": ""
+  },
+  {
     "id": "CF_NAME running-environment-variable-group",
     "translation": ""
   },
