--- a/cf/i18n/resources/pt-br.untranslated.json
+++ b/cf/i18n/resources/pt-br.untranslated.json
@@ -708,6 +708,10 @@
     "translation": "CF_NAME routes [--orglevel]"
   },
   {
+    "id": "CF_NAME run-task APP_NAME COMMAND\\n\\nEXAMPLES:\\n   CF_NAME run-task my-app \\\"bundle exec rake db:migrate\\\"",
+    "translation": ""
+  },
+  {
     "id": "CF_NAME running-environment-variable-group",
     "translation": "CF_NAME running-environment-variable-group"
   },
